@@ -1,5 +1,5 @@
 /*
- * Copyright  2001-2004 The Apache Software Foundation
+ * Copyright  2001-2005 The Apache Software Foundation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -35,22 +35,16 @@ public class Jikes extends DefaultCompilerAdapter {
      * Performs a compile using the Jikes compiler from IBM.
      * Mostly of this code is identical to doClassicCompile()
      * However, it does not support all options like
-     * bootclasspath, extdirs, deprecation and so on, because
+     * extdirs, deprecation and so on, because
      * there is no option in jikes and I don't understand
      * what they should do.
      *
-     * It has been successfully tested with jikes >1.10
+     * It has been successfully tested with jikes &gt;1.10
      */
     public boolean execute() throws BuildException {
         attributes.log("Using jikes compiler", Project.MSG_VERBOSE);
 
         Path classpath = new Path(project);
-
-        // Jikes doesn't support bootclasspath dir (-bootclasspath)
-        // so we'll emulate it for compatibility and convenience.
-        if (bootclasspath != null) {
-            classpath.append(bootclasspath);
-        }
 
         // Jikes doesn't support an extension dir (-extdir)
         // so we'll emulate it for compatibility and convenience.
@@ -202,6 +196,11 @@ public class Jikes extends DefaultCompilerAdapter {
 
         int firstFileName = cmd.size();
         logAndAddFilesToCompile(cmd);
+
+        if (bootclasspath != null) {
+            cmd.createArgument().setValue("-bootclasspath");
+            cmd.createArgument().setPath(bootclasspath);
+        }
 
         return
             executeExternalCompile(cmd.getCommandline(), firstFileName) == 0;
